gloo-istio/other/99-grafana-stack.yaml
# LOKI
---
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - 'grafana.127-0-0-1.nip.io'
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: monitoring-grafana-3000
            namespace: gloo-system
---
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: prometheus-vs
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - 'prometheus.127-0-0-1.nip.io'
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: monitoring-prometheus-operated-9090
            namespace: gloo-system
