gloo-istio/other/99-local-stack-helm.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: localstack
  labels:
    name: localstack
---
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: localstack-vs
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - 'localstack.127-0-0-1.nip.io'
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: localstack-localstack-4566
            namespace: gloo-system
